# nnikiti-web-app

./: .gitattributes  DESIGN.md  README.md  nginx.conf
.claude/: settings.json  (+1 more)
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  backup.json  core-backup.json  diploma.docx  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  events-fixture.json  full_dump.json  gallery-fixture.json  new_backup.json  new_dump.json  openapi.yaml  pm_master.json  pyproject.toml  requirements.txt  subjects_iot.json  subjects_new.json
backend/core/: admin.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alumnus_status.py  0002_statisticblock_alter_mainslideritem_image_and_more.py  0003_alter_alumnus_image.py  0003_statisticblock_order.py  0004_partners_partnerstranslation.py  0005_rename_partners_partner_and_more.py  0006_faq_faqtranslation.py  0007_alumnus_alumnustranslation.py  0008_alumnus_links.py  0009_alumnislider.py  0010_alumnustranslation_degree_alumnustranslation_major_and_more.py
backend/departments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/departments/migrations/: 0001_initial.py  (+24 more)
backend/events/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/gallery/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/mysite/: navigation.py  schema.py  settings.py  urls.py
backend/users/: admin.py  authentication.py  models.py  pipeline.py  urls.py  utils.py  views.py
(+437 files in other folders)
